--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
-runtime: nodejs12
+runtime: nodejs
+env: flex
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
