--- a/cloud_build.yaml
+++ b/cloud_build.yaml
@@ -1,4 +1,4 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', '--version']
+    args: ['app', 'deploy', '--version', '20210517t152003']
 timeout: '1600s'
