staging-new test 1

--- a/cloud_build.yaml
+++ b/cloud_build.yaml
@@ -1,4 +1,4 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', '--version', '$_V_NUM']
-timeout: '3200s'
+    args: ['app', 'deploy']
+timeout: '1600s'
